# thrud

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  collectors.md
dev/: com.thrud.collector.dev.plist.template
scripts/: show_utilization.sh  show_utilization_braille.sh  show_utilization_chart.sh
src/: lib.rs
src/collectors/: gpu.rs  gpu_bridge.h  gpu_swift_bridge.swift  mod.rs  types.rs
src/collectors/cpu/: apple_silicon.rs  apple_silicon_bridge.swift  mod.rs
src/collectors/gpu/: apple_silicon.rs  apple_silicon_bridge.swift  mod.rs
src/storage/: mod.rs  sqlite.rs
src/storage/aggregations/: apple_silicon_cpu.rs  mod.rs
