[package]
name = "thrud"
version = "0.1.0"
edition = "2021"
description = "System metrics collector for local/small-scale networking use"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "thrud"
path = "src/lib.rs"

[[bin]]
name = "thrud-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "thrud-collector"
path = "src/bin/collector.rs"

[[bin]]
name = "thrud-chart-query"
path = "src/bin/chart_query.rs"

[build-dependencies]
cc = "1.0"